--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
     "babel-loader": "^6.2.10",
     "babel-preset-env": "^1.1.8",
     "babel-preset-es2015": "^6.18.0",
+    "css-loader": "^0.26.1",
+    "extract-text-webpack-plugin": "^1.0.1",
+    "sass-loader": "^4.1.1",
     "webpack": "^1.14.0",
     "webpack-dev-server": "^1.16.2"
   }
