--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "babel-preset-es2015": "^6.18.0",
     "css-loader": "^0.26.1",
     "extract-text-webpack-plugin": "^1.0.1",
-    "jasmine": "^2.5.3",
+    "jasmine-es6": "^0.4.0",
+    "jquery": "^3.1.1",
+    "jsdom": "^9.9.1",
     "node-sass": "^4.3.0",
     "sass-loader": "^4.1.1",
     "style-loader": "^0.13.1",
