--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "extract-text-webpack-plugin": "^1.0.1",
     "jasmine-es6": "^0.4.0",
     "jquery": "^3.1.1",
-    "jsdom": "^9.9.1",
+    "jsdom": "9.9.1",
+    "jsdom-global": "2.1.1",
     "node-sass": "^4.3.0",
     "sass-loader": "^4.1.1",
     "style-loader": "^0.13.1",
