--- a/package.json
+++ b/package.json
@@ -23,10 +23,14 @@
     "babel-preset-es2015": "^6.18.0",
     "css-loader": "^0.26.1",
     "extract-text-webpack-plugin": "^1.0.1",
+    "jasmine-core": "^2.5.2",
     "jasmine-es6": "^0.4.0",
     "jquery": "^3.1.1",
     "jsdom": "9.9.1",
     "jsdom-global": "2.1.1",
+    "karma": "^1.4.1",
+    "karma-chrome-launcher": "^2.0.0",
+    "karma-jasmine": "^1.1.0",
     "node-sass": "^4.3.0",
     "sass-loader": "^4.1.1",
     "style-loader": "^0.13.1",
