--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "Solution of project euler problems in ecmascript",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "karma start my.conf.js --single-run"
   },
   "repository": {
     "type": "git",
@@ -21,6 +21,8 @@
     "babel-loader": "^6.2.10",
     "babel-preset-env": "^1.1.8",
     "babel-preset-es2015": "^6.18.0",
+    "babelify": "^7.3.0",
+    "browserify": "^14.0.0",
     "css-loader": "^0.26.1",
     "extract-text-webpack-plugin": "^1.0.1",
     "jasmine-core": "^2.5.2",
@@ -29,11 +31,14 @@
     "jsdom": "9.9.1",
     "jsdom-global": "2.1.1",
     "karma": "^1.4.1",
+    "karma-browserify": "^5.1.1",
     "karma-chrome-launcher": "^2.0.0",
     "karma-jasmine": "^1.1.0",
+    "karma-webpack": "^2.0.2",
     "node-sass": "^4.3.0",
     "sass-loader": "^4.1.1",
     "style-loader": "^0.13.1",
+    "watchify": "^3.9.0",
     "webpack": "^1.14.0",
     "webpack-dev-server": "^1.16.2"
   }
