--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "babelify": "^7.3.0",
     "browserify": "^14.0.0",
     "css-loader": "^0.26.1",
+    "eslint": "^3.15.0",
     "extract-text-webpack-plugin": "^1.0.1",
     "jasmine-core": "^2.5.2",
     "jasmine-es6": "^0.4.0",
