--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "css-loader": "^0.26.1",
     "eslint": "^3.15.0",
     "extract-text-webpack-plugin": "^1.0.1",
+    "jQuery": "^1.7.4",
     "jasmine-core": "^2.5.2",
     "jasmine-es6": "^0.4.0",
     "jquery": "^3.1.1",
@@ -39,6 +40,7 @@
     "node-sass": "^4.3.0",
     "sass-loader": "^4.1.1",
     "style-loader": "^0.13.1",
+    "underscore": "^1.8.3",
     "watchify": "^3.9.0",
     "webpack": "^1.14.0",
     "webpack-dev-server": "^1.16.2"
