--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "description": "Solutions of problems from project euler implemented in ES6",
   "scripts": {
-    "start": "webpack-dev-server --progress --colors",
+    "start": "WEBPACK_ENV=dev webpack-dev-server --progress --colors --content-base public/",
+    "release": "WEBPACK_ENV=build webpack",
     "server": "webpack-dev-server --progress --colors --host 0.0.0.0 --port 80",
     "test": "karma start my.conf.js --single-run",
     "lint": "eslint spec js"
@@ -27,12 +28,10 @@
     "babelify": "^7.3.0",
     "browserify": "^14.0.0",
     "css-loader": "^0.26.1",
-    "eslint": "^3.15.0",
+    "eslint": "3.15.0",
     "extract-text-webpack-plugin": "^1.0.1",
-    "jQuery": "^1.7.4",
     "jasmine-core": "^2.5.2",
     "jasmine-es6": "^0.4.0",
-    "jquery": "^3.1.1",
     "jsdom": "9.9.1",
     "jsdom-global": "2.1.1",
     "karma": "^1.4.1",
@@ -47,6 +46,7 @@
     "watchify": "^3.9.0",
     "webpack": "^1.14.0",
     "webpack-dev-server": "^1.16.2",
+    "webworkify-webpack": "^2.0.1",
     "worker-loader": "^0.7.1"
   }
 }
