--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "release": "WEBPACK_ENV=build webpack",
     "server": "webpack-dev-server --progress --colors --host 0.0.0.0 --port 8080 --content-base public/",
     "test": "karma start my.conf.js --single-run",
+    "testing": "karma start my.conf.js",
     "lint": "eslint spec js"
   },
   "repository": {
@@ -30,6 +31,7 @@
     "css-loader": "^0.26.1",
     "eslint": "3.15.0",
     "extract-text-webpack-plugin": "^1.0.1",
+    "html-loader": "^0.4.5",
     "jasmine-core": "^2.5.2",
     "jasmine-es6": "^0.4.0",
     "jsdom": "9.9.1",
@@ -38,6 +40,7 @@
     "karma-browserify": "^5.1.1",
     "karma-chrome-launcher": "^2.0.0",
     "karma-jasmine": "^1.1.0",
+    "karma-spec-reporter": "0.0.30",
     "karma-webpack": "^2.0.2",
     "node-sass": "^4.3.0",
     "sass-loader": "^4.1.1",
