--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "release": "WEBPACK_ENV=build webpack",
     "server": "webpack-dev-server --progress --colors --host 0.0.0.0 --port 8080 --content-base public/",
     "test": "karma start my.conf.js --single-run",
-    "testing": "karma start my.conf.js",
+    "test:watch": "karma start my.conf.js",
     "lint": "eslint spec js"
   },
   "repository": {
@@ -25,9 +25,9 @@
     "babel-core": "^6.21.0",
     "babel-loader": "^6.2.10",
     "babel-preset-env": "^1.1.8",
-    "babel-preset-es2015": "^6.18.0",
+    "babel-preset-es2015": "^6.22.0",
     "babelify": "^7.3.0",
-    "browserify": "^14.0.0",
+    "browserify": "^14.1.0",
     "css-loader": "^0.26.1",
     "eslint": "3.15.0",
     "extract-text-webpack-plugin": "^1.0.1",
@@ -37,9 +37,11 @@
     "jsdom": "9.9.1",
     "jsdom-global": "2.1.1",
     "karma": "^1.4.1",
+    "karma-babel-preprocessor": "^6.0.1",
     "karma-browserify": "^5.1.1",
     "karma-chrome-launcher": "^2.0.0",
     "karma-jasmine": "^1.1.0",
+    "karma-jasmine-web-worker": "^0.1.2",
     "karma-spec-reporter": "0.0.30",
     "karma-webpack": "^2.0.2",
     "node-sass": "^4.3.0",
