--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "karma-babel-preprocessor": "^6.0.1",
     "karma-browserify": "^5.1.1",
     "karma-chrome-launcher": "^2.0.0",
+    "karma-firefox-launcher": "^1.0.1",
     "karma-jasmine": "^1.1.0",
     "karma-jasmine-web-worker": "^0.1.2",
     "karma-spec-reporter": "0.0.30",
