--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "browserify": "^14.1.0",
     "css-loader": "^0.26.1",
     "eslint": "3.15.0",
+    "express": "^4.15.2",
     "extract-text-webpack-plugin": "^1.0.1",
     "html-loader": "^0.4.5",
     "jasmine-core": "^2.5.2",
