--- a/package.json
+++ b/package.json
@@ -59,5 +59,8 @@
     "webpack-dev-server": "^1.16.2",
     "webworkify-webpack": "^2.0.1",
     "worker-loader": "^0.7.1"
+  },
+  "dependencies": {
+    "express": "^4.15.2"
   }
 }
