--- a/package.json
+++ b/package.json
@@ -31,7 +31,6 @@
     "babel-preset-env": "^1.1.8",
     "babel-preset-es2015": "^6.22.0",
     "babelify": "^7.3.0",
-    "browserify": "^14.1.0",
     "css-loader": "^0.26.1",
     "eslint": "3.15.0",
     "express": "^4.15.2",
@@ -39,8 +38,6 @@
     "html-loader": "^0.4.5",
     "jasmine-core": "^2.5.2",
     "jasmine-es6": "^0.4.0",
-    "jsdom": "9.9.1",
-    "jsdom-global": "2.1.1",
     "karma": "^1.4.1",
     "karma-babel-preprocessor": "^6.0.1",
     "karma-browserify": "^5.1.1",
@@ -61,6 +58,26 @@
     "worker-loader": "^0.7.1"
   },
   "dependencies": {
-    "express": "^4.15.2"
+    "babel-cli": "^6.18.0",
+    "babel-core": "^6.21.0",
+    "babel-loader": "^6.2.10",
+    "babel-preset-env": "^1.1.8",
+    "babel-preset-es2015": "^6.22.0",
+    "babelify": "^7.3.0",
+    "css-loader": "^0.26.1",
+    "express": "^4.15.2",
+    "extract-text-webpack-plugin": "^1.0.1",
+    "html-loader": "^0.4.5",
+    "jasmine-core": "^2.5.2",
+    "jasmine-es6": "^0.4.0",
+    "node-sass": "^4.3.0",
+    "sass-loader": "^4.1.1",
+    "style-loader": "^0.13.1",
+    "underscore": "^1.8.3",
+    "watchify": "^3.9.0",
+    "webpack": "^1.14.0",
+    "webpack-dev-server": "^1.16.2",
+    "webworkify-webpack": "^2.0.1",
+    "worker-loader": "^0.7.1"
   }
 }
